--- a/index.ipynb
+++ b/index.ipynb
@@ -148,23 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'vandelay.com'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "website = \"vandelay.com\"\n",
-    "website"
+    "website = \"van\""
    ]
   },
   {
