Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -125,23 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'art.vandelay@vandelay.co'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandelay.co\"\n",
-    "email"
+    "email = \"art.vandelay@vandelay.co\""
    ]
   },
   {
@@ -214,23 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Art Vandelay'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = 'Art Vandelay'\n",
-    "name"
+    "name = 'Art Vandelay'\n"
    ]
   },
   {
